2010-06-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c:
	    Set software tocall to 'APRX1H'.

	* interface.c:
	    Found a memory leak on AX.25 type packet receiver. Oops!
	    Ax.25 packets that were rejected by <digipeater> <source>'s
	    filters were just leaked, not disposed.

	* historydb.c:
	    Allocate cell arenas in 128 kB blocks.

	* digipeater.c:
	    Valgrind complained about uninitialized variables.
	    Default zero is not good enough...

2010-05-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, digipeater.c:
	    Use 'float' for ratelimit variables.  Permitting as low
	    rate definitions as 'once per 10 minutes.

	* dprsgw.c:
	    XOR checksums of "GPS" mode packets.  No Rx-iGate of them yet.

2010-05-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* dprsgw.c, ttyreader.c, aprx.c, aprx.h:
	    Experimental DPRS receiver. Studying packet identification
	    from serial port datastream with Rx-IGate of GPS-A type DPRS
	    packets.

	* interface.c, doc/aprx-manual.odt:
	    Effects of 'filter ...'  on different <digipeater>
	    <source> sections are subtly different. See the manual!

	* aprx.h, digipeater.c, doc/aprx-manual.odt, aprx.conf.in,
	  aprx-complex.conf.in:
	    Remodelled the ratelimiting to use 'token bucket filter':
	       ratelimit average burst
	    both values are packets per minute, and both default to 60.

	* digipeater.c, interface.c:
	    Return adjunk filters to RF->RF digipeating.
	    They got lost a bit back with Tx-IGate needing
	    them placed a bit differently.

	* man-to-html.sh:
	    groff has changed its -Tascii output a bit, and
	    its own HTML output is horrible...

2010-05-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c:
	    Correct parse of message recipients.
	    Fix from Patrick Domack K3PDK.

2010-05-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* debian/rules, rpm/aprx.spec.in, aprsis.c:
	    Fixes on pthread:ed aprsis implementation.